# x-without-junk

./: .coverage  .env.example  .gitignore  README.md  README.md.bak  git_commit.sh  pyproject.toml
config/: CLAUDE.md  patterns.yaml
docs/: CLAUDE.md
first_agent/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
first_agent/prompts/: analysis.md
first_agent/src/first_agent/: CLAUDE.md  __init__.py  agent.py  filters.py  main.py
prompts/: system.md
src/: CLAUDE.md
src/first_agent/: agent.py  bird_client.py  filters.py  main.py  parsers.py
tests/: __init__.py  test_agent_prompt.py  test_bird_client.py  test_filters.py
